[package]
name = "jiffy"
version = "0.1.0"
edition = "2021"
license = "GPL2"

[dependencies]
anyhow = "1.0.52"
clap = { version = "4", features = ["derive", "wrap_help", "suggestions"] }
env_logger = "0.9.0"
futures = "0.3.19"
globset = "0.4.8"
human-sort = "0.2.2"
log = "0.4.14"
num_cpus = "1.13.1"
pathdiff = "0.2.1"
rand = "0.8.5"
regex = "1.5.4"
scan_fmt = "0.2.6"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
